--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular-devkit/build-angular": "^18.2.0",
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
+    "@ngx-env/builder": "^18.0.2",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.3.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -34,5 +36,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.2"
-  }
+  },
+  "packageManager": "yarn@4.9.4"
 }
